--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ body {
 
 /* Стилизация кнопки "Начать" */
 #startBtn {
-  padding: 20px 40px;
-  font-size: 24px;
+  padding: 5px 10px;
+  font-size: 12px;
   background-color: #800020;
   color: #fff;
   border: none;
@@ -108,4 +108,17 @@ body {
 .hidden-photo.visible {
   display: block;
   opacity: 1;
+}
+
+.overlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 100vh;
+}
+
+.proof-text, #proofInput, #startBtn, #errorMessage {
+  margin: 5px 0;
 }
